Done fully styling the header

--- a/index.html
+++ b/index.html
@@ -10,41 +10,35 @@
   </head>
   <body>
     <header>
-      <nav class="first-section">
+      <div class="first-section">
         <img src="/images/logo.png" alt="Coffe-shop logo" />
         <span class="links">
           <ul>
             <li>
-              <a href="#">link one</a>
+              <a href="#">Home</a>
             </li>
             <li>
-              <a href="#">link two</a>
+              <a href="#">About</a>
             </li>
             <li>
-              <a href="#">link three</a>
+              <a href="#">SocialMedia</a>
             </li>
           </ul>
         </span>
-      </nav>
+      </div>
       <div class="container">
         <span class="header-main-left">
           <h1>Kōhīpurinsu</h1>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-            quod animi natus tempora quae nostrum ea minima modi. Adipisci at
-            inventore quidem illo iure molestias recusandae quia iste?
-            Recusandae, omnis.
+         Hello, I am Ayah the creator of this page where it will be my future's coffee shop official page.
+         <br>
+         But for now, i will be using it to just show case my favorite coffee's & coffe related stuff.
           </p>
 
           <button>sign up</button>
         </span>
 
-        <img
-          src="https://via.placeholder.com/200x100/000000/
-
-    C/O https://placeholder.com/#How_To_Use_Our_Placeholders"
-          alt=""
-        />
+        <img src="/images/brown-set.jpg" alt="Brown-coffee-set"/>
       </div>
     </header>
 
@@ -92,9 +86,8 @@
       </div>
 
       <div class="main-part3">
-          <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur</p>
-      
+        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur</p>
       </div>
       <button class="sign">sign up</button>
     </main>
