--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       </div>
       <div class="container">
         <span class="header-main-left">
-          <h1>Kōhīpurinsu</h1>
+          <!-- <h1>Kōhīpurinsu</h1> -->
+          <h1>Coffee Prince</h1>
+
           <p>
          Hello, I am Ayah the creator of this page where it will be my future's coffee shop official page.
          <br>
@@ -43,51 +45,46 @@
     </header>
 
     <main>
-      <h2>Lorem, ipsum dolor sit amet</h2>
+      <h2>My different coffee preferences
+
+      </h2>
       <div class="main-part1-img">
         <img
-          src="https://via.placeholder.com/100x100/000000/
-
-   C/O https://placeholder.com/#How_To_Use_Our_Placeholders"
-          alt=""
+          src="/images/Arabic-coffee.jpg"
+          alt="Arabic-coffee"
         />
         <img
-          src="https://via.placeholder.com/100x100/000000/
-
-   C/O https://placeholder.com/#How_To_Use_Our_Placeholders"
-          alt=""
-        />
+        src="/images/American-coffee.jpg"
+        alt="American-coffee"
+      />
         <img
-          src="https://via.placeholder.com/100x100/000000/
-
-   C/O https://placeholder.com/#How_To_Use_Our_Placeholders"
-          alt=""
+          src="/images/Espresso.jpg"
+          alt="Espresso"
         />
+       
         <img
-          src="https://via.placeholder.com/100x100/000000/
-
-   C/O https://placeholder.com/#How_To_Use_Our_Placeholders"
-          alt=""
+          src="/images/Nescafe.jpg"
+          alt="Nescafe"
         />
       </div>
       <div class="main-part1-p">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        <p>Arabic Coffee <br> because it's the first kind i've ever tried.</p>
+        <p>American Coffee <br> My dearest American coffee as it just tastes different in the best way possible</p>
+        <p>Espresso <br> it's just dark and tastes like a literall dream </p>
+        <p>Nescafe Black <br> cause i know how to make it exactly how i love (Dark & bitter)</p>
+      
       </div>
       <div class="main-part2">
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia nam
-          officia magni quae corrupti. Mollitia perspiciatis harum officiis
-          ducimus debitis provident excepturi vero fugiat. Facere, ab quam. Aut,
-          enim necessitatibus.
+         "Good ideas start with brainstorming, Great ideas start with coffee...:)"
+
         </p>
+        <p class="author-name"> -Book by Barista Journals Brigade.</p>
       </div>
 
       <div class="main-part3">
-        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur</p>
+        <h3>Call to know more about the project!!</h3>
+        <p>Sign up to become a member!!by clicking the button on the right</p>
       </div>
       <button class="sign">sign up</button>
     </main>
