Done FULLY styling the landing page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          But for now, i will be using it to just show case my favorite coffee's & coffe related stuff.
           </p>
 
-          <button>sign up</button>
+          <button>Sign Up</button>
         </span>
 
         <img src="/images/brown-set.jpg" alt="Brown-coffee-set"/>
@@ -84,9 +84,12 @@
 
       <div class="main-part3">
         <h3>Call to know more about the project!!</h3>
+        
         <p>Sign up to become a member!!by clicking the button on the right</p>
+        <button>Sign Up</button>
+
       </div>
-      <button class="sign">sign up</button>
+    
     </main>
 
     <footer>&copy;The Odin project, Created by Ayah Smadi</footer>
